Обновлены настройки подключения к базе данных в application.yml, уменьшены размеры пула Hikari, изменены параметры JWT, обновлены зависимости в pom.xml, удален класс SecurityConfig и добавлен DefaultPasswordInitializer для обновления паролей тестовых пользователей при первом запуске.